fix: changed padding to border to fix displaced scrollbar

--- a/src/components/AssetTree/AssetTree.style.css
+++ b/src/components/AssetTree/AssetTree.style.css
@@ -79,5 +79,5 @@ header {
 	border: 1px solid var(--color-lightgray);
 	border-radius: 2px;
 	overflow: auto;
-	padding-block-start: 8px;
+	margin-block-start: 8px;
 }
